--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
   * {
     margin: 0;
     padding: 0;
-  font-family: 'Sigmar One', cursive
+    font-family: 'Sigmar One', cursive
   }
 
   @keyframes rotate {
     0% {
-      transform:  translateX(-100%) rotate(0deg);
+      transform: translateX(100vw) rotate(720deg);
     }
 
     100% {
-      transform: translateX(100vw) rotate(720deg);
+      transform: translateX(-100%) rotate(0deg);
     }
   }
 
 
-  html{
+  html {
     min-height: 100vh;
-    background: linear-gradient(to top, lightsalmon, ivory);
+    background: linear-gradient(to top, forestgreen, ivory);
   }
 
   .photo {
@@ -47,6 +47,42 @@
     animation-timing-function: linear;
   }
 
+  .photo-1 {
+    width: 300px;
+    height: 300px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+    animation-duration: 2s;
+    animation-name: rotate;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }
+
+  .photo-2 {
+    width: 300px;
+    height: 300px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+    animation-duration: 4s;
+    animation-name: rotate;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }
+
+  .photo-3 {
+    width: 300px;
+    height: 300px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+    animation-duration: 5s;
+    animation-name: rotate;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }
+
   .photo>img {
     position: absolute;
     width: 100%;
@@ -56,30 +92,27 @@
 
   }
 
-  .content{
+  .content {
     padding-top: 100px;
     display: flex;
     /* justify-content: center; */
   }
 
-header{
-  display: flex;
-  padding-top: 50px;
-  justify-content: center;
-  padding-right: 25px;
-  padding-left: 25px;
-  text-align: center;
-}
+  header {
+    display: flex;
+    padding-top: 50px;
+    justify-content: center;
+    padding-right: 25px;
+    padding-left: 25px;
+    text-align: center;
+  }
 
-h1 {
-  display: inline;
-  position: relative;
-  border-bottom: 5px solid rgba(87, 255, 45, 0.5);
-  color: rgb(70, 70, 70);
-}
-
-
-
+  h1 {
+    display: inline;
+    position: relative;
+    border-bottom: 5px solid rgba(87, 255, 45, 0.5);
+    color: rgb(70, 70, 70);
+  }
 </style>
 <header>
   <div>
@@ -94,7 +127,15 @@ h1 {
     <div class="photo">
       <img src="./headshot.jpg" alt="headshot">
     </div>
+    <div class="photo-1">
+      <img src="./headshot.jpg" alt="headshot">
+    </div>
+    <div class="photo-2">
+      <img src="./headshot.jpg" alt="headshot">
+    </div>
+    <div class="photo-3">
+      <img src="./headshot.jpg" alt="headshot">
+    </div>
   </div>
 </body>
-
 </html>
